--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,9 +2,9 @@ name: Build, Test, and Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ "release" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "release" ]
+    branches: [ "master" ]
 
 jobs:
   deploy:
